remove vw and fix spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ a{
 
 body {
     font-family: 'Raleway', sans-serif;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     max-width: 1400px;
 }
@@ -75,7 +75,7 @@ nav li a:hover{
 }
 
 main {
-    margin: 0 50px 50px;
+    margin: 0;
 }
 
 #search-input {
@@ -419,6 +419,13 @@ footer {
 
 @media only screen and (max-width: 991px) {
 
+
+    .hosts {
+        justify-content: space-around;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
     .sections {
         flex-direction: column;
     }
@@ -445,10 +452,17 @@ footer {
         margin: 0 0 30px 0;
       }
 
+    .host {
+        width: 220px;
+        height: 199px;
+        margin: 0;
+        margin-bottom: 30px;
+    }
+
     .popular img {
-        width: 10vw;
-        max-width: 10vw;
-        min-width: 10vw;
+        width: 35%;
+        max-width: 35%;
+        min-width: 35%;
     }
     .popular p {
         font-size: 13px;
@@ -456,6 +470,27 @@ footer {
     
     .popular h4 {
         font-size: 14px;
+    }
+
+    main {
+        margin-left: 20px;
+        margin-right: 20px;
+     }
+
+    .activity {
+        height: 260px;
+    }
+
+    .activity img {
+        width: 100%;
+        max-width: 100%;
+        height: 200px;
+        min-height: 200px;
+    }
+
+    .activity h4 {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 
@@ -472,23 +507,24 @@ footer {
         margin-left: 0;
     }
     nav {
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         padding: 0;
     }
 
     nav ul {
         justify-content: space-between;
+        flex-grow: 1;
     }
 
     nav a {
-        width: 50vw;
+        width: 100%;
         text-align: center;
     }
 
     nav li {
         text-align: center;
-        width: 50vw;
+        width: 100%;
     }
 
     nav li a:hover{
@@ -519,13 +555,12 @@ footer {
     }
 
     h1 {
-        width: 80vw;
+        width: 90%;
     }
 
     .filtrate {
-        width: 90vw;
+        width: 100%;
         flex-direction: column;
-        margin-left: -30px;
     }
 
     .filter h3 {
@@ -533,7 +568,7 @@ footer {
     }
 
     .filter {
-        width: 40vw;
+        width: 47%;
         min-width: 140px;
         padding: 0;
         margin: 0 0 17px 0;
@@ -545,8 +580,7 @@ footer {
     }
 
     #search {
-        width: 90vw;
-        margin-left: -35px;
+        width: 90%;
     }
 
     #search-submit i {
@@ -558,10 +592,13 @@ footer {
         width: auto;
     }
 
+    .container {
+        width: 50%;
+    }
+
     .popular {
         border-radius: 0;
-        width: 100vw;
-        margin-left: -50px;
+        width: 100%;
     }
 
     .populars {
@@ -572,7 +609,7 @@ footer {
         border-radius: 20px;
         width: auto;
         justify-content: normal;
-        margin: 0 20px 30px 0;
+        margin: 0 0 30px 0;
     }
 
     .sections {
@@ -592,9 +629,9 @@ footer {
         min-width: 40%;
     }
 
+
     .hosting {
-        width: 100vw;
-        margin-left: -50px;
+        width: 100%;
     }
 
     .hosts {
@@ -606,8 +643,8 @@ footer {
     }
 
     .host {
-        width: 90vw;
-        max-width: 90vw;
+        width: 100%;
+        max-width: 100%;
     }
 
     .hosting h3 {
@@ -620,20 +657,19 @@ footer {
     }
 
     .activity {
-        width: 90vw;
+        width: 90%;
         margin-left: 20px;
         margin-bottom: 30px;
     }
 
     .activity img {
-        width: 90vw;
-        max-width: 90vw;
+        width: 100%;
+        max-width: 100%;
         height: 190px;
     }
 
     .activities {
-        width: 100vw;
-        margin-left: -50px;
+        width: 100%;
     }
 
     .activities h2 {
@@ -641,8 +677,7 @@ footer {
     }
 
     footer {
-        margin-left: -50px;
-        width: 100vw;
+        width: 100%;
     }
 
     .footer-sections {
@@ -652,13 +687,25 @@ footer {
     .footer-section {
         padding-bottom: 0px;
     }
-     p {
-        width: 80vw;
-     }
+
+    p {
+        width: 80%;
+    }
 
      .info {
-        width: 90vw;
-        margin-left: -30px;
+        width: 90%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    #head {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+     main {
+        margin: 0;
+        padding: 0;
      }
 
 }
